--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
       <div class="name-title-container play-regular">
         <h1>Álvaro Dávila</h1><br>
         <h2>Frontend Developer</h2>
+        <div>
+          <a class="text-decoration-none text-reset" href="https://github.com/adaviladev" target="_blank">
+            <i class="fa-brands fa-github m-2"></i>
+          </a>
+          <a class="text-decoration-none text-reset" href="https://www.linkedin.com/in/alvarodavilapinto/" target="_blank">
+            <i class="fa-brands fa-linkedin m-2"></i>
+          </a>
+          <a class="text-decoration-none text-reset" href="https://www.instagram.com/alvarodavila87/" target="_blank">
+            <i class="fa-brands fa-instagram m-2"></i>
+          </a>
+        </div>
       </div>
       <div class="accordion-flush" id="accordionFlushExample">
         <div class="accordion-item bg-transparent about">
@@ -82,7 +93,7 @@
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body text-white d-flex justify-content-evenly  p-2">
+            <div class="accordion-body text-white d-flex justify-content-left p-0">
               <div class="tech-icons">
                 <i class="fa-brands fa-html5" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML5"></i>
                 <i class="fa-brands fa-css3-alt" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS3"></i>
@@ -114,7 +125,7 @@
               <div class="row row-cols-1 row-cols-md-2 g-4">
                 <!-- Project 1 Card -->
                 <div class="col">
-                  <div class="card">
+                  <div class="card bg-transparent">
                     <a href="https://adaviladev.github.io/adavilatr/" target="_blank">
                       <div class="project-image-container"><img src="images/cards/translatorwebsite.png"
                           class="card-img-top" alt="..."></div>
