update colors and margins

--- a/index.html
+++ b/index.html
@@ -55,27 +55,27 @@
         <h2>Frontend Developer</h2>
         <div>
           <a class="text-decoration-none text-reset" href="https://github.com/adaviladev" target="_blank">
-            <i class="fa-brands fa-github m-2"></i>
+            <i class="fa-brands fa-github m-3"></i>
           </a>
           <a class="text-decoration-none text-reset" href="https://www.linkedin.com/in/alvarodavilapinto/" target="_blank">
-            <i class="fa-brands fa-linkedin m-2"></i>
+            <i class="fa-brands fa-linkedin m-3"></i>
           </a>
           <a class="text-decoration-none text-reset" href="https://www.instagram.com/alvarodavila87/" target="_blank">
-            <i class="fa-brands fa-instagram m-2"></i>
+            <i class="fa-brands fa-instagram m-3"></i>
           </a>
         </div>
       </div>
       <div class="accordion-flush" id="accordionFlushExample">
         <div class="accordion-item bg-transparent about">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button"
+            <button class="accordion-button collapsed bg-transparent  d-block text-center fs-4" type="button"
               data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
               aria-controls="flush-collapseOne">
               About
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body about-me text-white p-2">
+            <div class="accordion-body about-me  p-2">
               <p>Hi! My name is Álvaro, and I'm a <strong>Frontend Developer</strong> passionate about building engaging
                 digital interfaces. I'm skilled in HTML, CSS, JavaScript, and React. I enjoy collaborating with design and backend teams to create
                 user-friendly experiences and I am always eager to learn and adapt to new technologies in web development.
@@ -86,14 +86,14 @@
         </div>
         <div class="accordion-item bg-transparent tech stack">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4" type="button"
+            <button class="accordion-button collapsed bg-transparent  d-block text-center fs-4" type="button"
               data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
               aria-controls="flush-collapseTwo">
               Tech Stack
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body text-white d-flex justify-content-left p-0">
+            <div class="accordion-body  d-flex justify-content-left p-0">
               <div class="tech-icons">
                 <i class="fa-brands fa-html5" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML5"></i>
                 <i class="fa-brands fa-css3-alt" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS3"></i>
@@ -111,16 +111,15 @@
         </div>
         <div class="accordion-item bg-transparent projects">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4 mb-2"
+            <button class="accordion-button collapsed bg-transparent  d-block text-center fs-4 mb-2"
               type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false"
               aria-controls="flush-collapseThree">
               Projects
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body projects text-white  p-2">
-              <p>This is a selection of projects I have been working on recently. Click on the image to visit the live
-                version. You can also explore the repository at the link below each description.</p><br>
+            <div class="accordion-body projects   p-2">
+              <p>This is a selection of projects I have been working on recently.</p><br>
               <!-- Projects wrapper -->
               <div class="row row-cols-1 row-cols-md-2 g-4">
                 <!-- Project 1 Card -->
@@ -221,14 +220,14 @@
         </div>
         <div class="accordion-item bg-transparent contact">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4 mb-2"
+            <button class="accordion-button collapsed bg-transparent  d-block text-center fs-4 mb-2"
               type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false"
               aria-controls="flush-collapseFour">
               Contact
             </button>
           </h2>
           <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body text-white p-2 contact">
+            <div class="accordion-body  p-2 contact">
               <div class="contact-icons">
                 <i class="m-2 fa-brands fa-square-whatsapp"></i>
                 <a href="tel:+56981838598">+569 8183 8598</a>
